--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-<h1>Web Developer</h1>
+    <h1>Web Developer</h1>
     <div class="socials">
         <span><a target="_blank" href="https://fr-fr.facebook.com/"><i class="fab fa-facebook"></i></a></span>
         <span><a target="_blank" href="https://www.twitter.com"><i class="fab fa-twitter"></i></a></span>
@@ -23,7 +23,7 @@
     <div class="cart presentation">
         <img src="images/david.jpg" alt="Photo David" title="Photo David">
         <div class="credentials">
-        <h2>David Kips</h2>
+            <h2>David Kips</h2>
             <ul>
                 <li><i class="fas fa-home"></i><a target="_blank"  href="https://www.google.fr/maps/place/Namur,+Belgique/@50.4593883,4.7834003,12z/data=!3m1!4b1!4m5!3m4!1s0x47c1996d0c2c653f:0xc15626b6c4165205!8m2!3d50.4673883!4d4.8719854">12 rue des ablettes | 5000 Namur</a></li>
                 <li><i class="fas fa-envelope"></i><a target="_blank" href="mailto:davidkips77@gmail.com">davidkips77@gmail.com</a></li>
@@ -33,10 +33,14 @@
         </div>
     </div>
     <div class="cart career experience">
-        <div class="date">2015-2018</div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab doloribus eligendi illum molestiae nisi porro quibusdam ratione repellendus rerum soluta! Asperiores aut impedit itaque maiores placeat. Ab inventore quaerat quibusdam!</p>
-        <div class="date">2015-2018</div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab doloribus eligendi illum molestiae nisi porro quibusdam ratione repellendus rerum soluta! Asperiores aut impedit itaque maiores placeat. Ab inventore quaerat quibusdam!</p>
+        <div class="cart-bloc">
+            <div class="date">2015-2018</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab doloribus eligendi illum molestiae nisi porro quibusdam ratione repellendus rerum soluta! Asperiores aut impedit itaque maiores placeat. Ab inventore quaerat quibusdam!</p>
+        </div>
+        <div class="cart-bloc">
+            <div class="date">2015-2018</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab doloribus eligendi illum molestiae nisi porro quibusdam ratione repellendus rerum soluta! Asperiores aut impedit itaque maiores placeat. Ab inventore quaerat quibusdam!</p>
+        </div>
     </div>
     <div class="cart career skill">
 
