--- a/index.html
+++ b/index.html
@@ -35,12 +35,59 @@
     <div class="cart career experience">
         <div class="cart-bloc">
             <div class="date">2015-2018</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab doloribus eligendi illum molestiae nisi porro quibusdam ratione repellendus rerum soluta! Asperiores aut impedit itaque maiores placeat. Ab inventore quaerat quibusdam!</p>
+            <p><strong>Développeur Web au sein de l’entreprise Spada à Charleroi :</strong>
+            <ul>
+                <li>Réalisation de site internet</li>
+                <li>Création de modules wordpress et prestashop en PHP </li>
+            </ul>
+            </p>
         </div>
+        <div class="clear"></div>
         <div class="cart-bloc">
             <div class="date">2015-2018</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab doloribus eligendi illum molestiae nisi porro quibusdam ratione repellendus rerum soluta! Asperiores aut impedit itaque maiores placeat. Ab inventore quaerat quibusdam!</p>
+            <p><strong>Infographiste au sein de L’imprimerie Bourtembourg à Couvin :  </strong>
+            <ul>
+                <li>Réalisation de publicités pour un magazine</li>
+                <li>Création et mises à jour du site internet</li>
+            </ul>
+            </p>
         </div>
+        <div class="clear"></div>
+        <div class="cart-bloc">
+            <div class="date">2015-2018</div>
+            <p><strong>Infographiste (intérimaire) au sein du groupe Vlan :</strong>
+            <ul>
+                <li>Réalisation de publicités pour un magazine</li>
+            </ul>
+            </p>
+        </div>
+        <div class="clear"></div>
+        <div class="cart-bloc">
+            <div class="date">2015-2018</div>
+            <p><strong>Infographiste/Architecte d’intérieur au sein de la société Bedimo à Wavre :</strong>
+            <ul>
+            <li>Réalisation de catalogue de mobilier de bureau</li>
+            <li>Réalisation de plans d’aménagement d’intérieur en 2 et 3D</li>
+            <li>Responsable informatique</li>
+        </ul>
+            </p>
+        </div>
+        <div class="clear"></div>
+        <div class="cart-bloc">
+            <div class="date">2015-2018</div>
+            <p><strong>Stage de 2 semaines à l’Escuela de Artes de Oviedo en Espagne : </strong>
+            <ul>
+                <li>Participation à une exposition de photographie </li>
+            </ul>
+            </p>
+        </div>
+        <div class="clear"></div>
+        <div class="cart-bloc">
+            <div class="date">2015-2018</div>
+            <p><strong>Travail d’étudiant – Manutentionnaire chez Kraft Général Food à Rhisnes </strong>
+            </p>
+        </div>
+        <div class="clear"></div>
     </div>
     <div class="cart career skill">
 
