--- a/index.html
+++ b/index.html
@@ -35,65 +35,233 @@
     <div class="cart career experience">
         <div class="cart-bloc">
             <div class="date">2015-2018</div>
-            <p><strong>Développeur Web au sein de l’entreprise Spada à Charleroi :</strong>
+            <p><strong>Développeur Web au sein de l’entreprise Spada à Charleroi :</strong></p>
             <ul>
                 <li>Réalisation de site internet</li>
                 <li>Création de modules wordpress et prestashop en PHP </li>
             </ul>
-            </p>
         </div>
         <div class="clear"></div>
         <div class="cart-bloc">
             <div class="date">2015-2018</div>
-            <p><strong>Infographiste au sein de L’imprimerie Bourtembourg à Couvin :  </strong>
+            <p><strong>Infographiste au sein de L’imprimerie Bourtembourg à Couvin :  </strong></p>
             <ul>
                 <li>Réalisation de publicités pour un magazine</li>
                 <li>Création et mises à jour du site internet</li>
             </ul>
-            </p>
+
         </div>
         <div class="clear"></div>
         <div class="cart-bloc">
-            <div class="date">2015-2018</div>
-            <p><strong>Infographiste (intérimaire) au sein du groupe Vlan :</strong>
+            <div class="date">2004-2014</div>
+            <p><strong>Infographiste (intérimaire) au sein du groupe Vlan :</strong></p>
             <ul>
                 <li>Réalisation de publicités pour un magazine</li>
             </ul>
-            </p>
         </div>
         <div class="clear"></div>
         <div class="cart-bloc">
-            <div class="date">2015-2018</div>
-            <p><strong>Infographiste/Architecte d’intérieur au sein de la société Bedimo à Wavre :</strong>
+            <div class="date">2016</div>
+            <p><strong>Infographiste/Architecte d’intérieur au sein de la société Bedimo à Wavre :</strong></p>
             <ul>
-            <li>Réalisation de catalogue de mobilier de bureau</li>
-            <li>Réalisation de plans d’aménagement d’intérieur en 2 et 3D</li>
-            <li>Responsable informatique</li>
-        </ul>
-            </p>
+                <li>Réalisation de catalogue de mobilier de bureau</li>
+                <li>Réalisation de plans d’aménagement d’intérieur en 2 et 3D</li>
+                <li>Responsable informatique</li>
+            </ul>
+
         </div>
         <div class="clear"></div>
         <div class="cart-bloc">
-            <div class="date">2015-2018</div>
-            <p><strong>Stage de 2 semaines à l’Escuela de Artes de Oviedo en Espagne : </strong>
+            <div class="date">1997</div>
+            <p><strong>Stage de 2 semaines à l’Escuela de Artes de Oviedo en Espagne : </strong></p>
             <ul>
                 <li>Participation à une exposition de photographie </li>
             </ul>
-            </p>
         </div>
         <div class="clear"></div>
         <div class="cart-bloc">
-            <div class="date">2015-2018</div>
+            <div class="date">1996-1998</div>
             <p><strong>Travail d’étudiant – Manutentionnaire chez Kraft Général Food à Rhisnes </strong>
             </p>
         </div>
         <div class="clear"></div>
     </div>
     <div class="cart career skill">
+        <div class="col-3">
+            <div class="cart-bloc">
+                <span class="techno">Photoshop</span>
+                <span class="star star-on">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </span>
+                <span class="star star-off">
+                    <i class="fas fa-star"></i>
+                </span>
+            </div>
 
+            <div class="cart-bloc">
+                <span class="techno">Indesign</span>
+                <span class="star star-on">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </span>
+                <span class="star star-off">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </span>
+            </div>
+
+            <div class="cart-bloc">
+                <span class="techno">Illustrator</span>
+                <span class="star star-on">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </span>
+                <span class="star star-off">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </span>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="cart-bloc">
+                <span class="techno">HTML</span>
+                <span class="star star-on">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </span>
+            </div>
+
+            <div class="cart-bloc">
+                <span class="techno">CSS</span>
+                <span class="star star-on">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </span>
+            </div>
+
+            <div class="cart-bloc">
+                <span class="techno">Javascript</span>
+                <span class="star star-on">
+                    <i class="fas fa-star"></i>
+                </span>
+                <span class="star star-off">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </span>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="cart-bloc">
+                <span class="techno">PHP</span>
+                <span class="star star-on">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                                    </span>
+                <span class="star star-off">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </span>
+            </div>
+
+            <div class="cart-bloc">
+                <span class="techno">MySQL</span>
+                <span class="star star-on">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </span>
+                <span class="star star-off">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </span>
+            </div>
+
+            <div class="cart-bloc">
+                <span class="techno">Symfony</span>
+                <span class="star star-on">
+                    <i class="fas fa-star"></i>
+                                    </span>
+                <span class="star star-off">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </span>
+            </div>
+        </div>
+        <div class="clear"></div>
     </div>
     <div class="cart career training">
+        <div class="cart-bloc">
+            <div class="date">2019-2020</div>
+            <p><strong>Formation développeur Web - Fourmies (France)</strong>
+            </p>
+        </div>
+        <div class="clear"></div>
+        <div class="cart-bloc">
+            <div class="date">2015</div>
+            <p><strong>Formation développeur de base de données orienté Web – Technofutur TIC de Gosselies</strong>
+            </p>
+        </div>
+        <div class="clear"></div>
+        <div class="cart-bloc">
+            <div class="date">2014</div>
+            <p><strong>Formation développement de base - Technofutur TIC de Gosselies </strong>
+            </p>
+        </div>
+        <div class="clear"></div>
+        <div class="cart-bloc">
+            <div class="date">2007</div>
+            <p><strong>Formation de Web Designer – Centre de formation de Chooz </strong>
+            </p>
+        </div>
+        <div class="clear"></div>
+        <div class="cart-bloc">
+            <div class="date">1998-1999</div>
+            <p><strong>Formation d’infographie - Cepegra de Gosselies </strong>
+            </p>
+        </div>
+        <div class="clear"></div>
+        <div class="cart-bloc">
+            <div class="date">1997-1998</div>
+            <p><strong>Enseignement Supérieur des Arts Plastiques « LE 75 » Section Photographie</strong>
+            </p>
+        </div>
+        <div class="clear"></div>
+        <div class="cart-bloc">
+            <div class="date">1995-1997</div>
+            <p><strong>ITCF Félicien Rops de Namur, section photographie</strong></p>
+            <ul>
+                <li>Certificat de l’enseignement technique secondaire supérieur</li>
+                <li>Certificat de qualification en 6ième photographie</li>
+                <li>Certificat de connaissance de gestion</li>
+            </ul>
 
+        </div>
+        <div class="clear"></div>
+        <div class="cart-bloc">
+            <div class="date">1989-1995</div>
+            <p><strong>Institut Sainte-Marie Namur</strong></p>
+            <ul>
+                <li>Certificat de l’enseignement général secondaire inférieur </li>
+            </ul>
+
+        </div>
+        <div class="clear"></div>
     </div>
 </div>
 </body>
