--- a/index.html
+++ b/index.html
@@ -264,5 +264,45 @@
         <div class="clear"></div>
     </div>
 </div>
+<footer>
+    <h1>Contactez-moi</h1>
+    <form action="mailto:davidkips77@gmail.com">
+        <div class="col-2">
+            <div class="input-group">
+                <label for="lastname">Nom</label>
+                <input type="text" id="lastname" name="lastname">
+            </div>
+            <div class="input-group">
+                <label for="firstanme">Prénom</label>
+                <input type="text" id="firstanme" name="firstanme">
+            </div>
+<!--            <div class="input-group my-select">-->
+<!--                <div>-->
+<!--                    <label for="male">Homme</label>-->
+<!--                    <input type="radio" id="male" name="sexe" value="male">-->
+<!--                </div>-->
+<!--                <div>-->
+<!--                    <label for="female">Femme</label>-->
+<!--                    <input type="radio" id="female" name="sexe" value="female">-->
+<!--                </div>-->
+<!--                <div>-->
+<!--                    <label for="other">Autre</label>-->
+<!--                    <input type="radio" id="other" name="sexe" value="other">-->
+<!--                </div>-->
+<!--            </div>-->
+        </div>
+
+        <div class="col-2">
+            <div class="input-group">
+                <label for="msg">Message</label>
+                <textarea name="msg" id="msg"  rows="4"></textarea>
+            </div>
+        </div>
+        <div class="clear"></div>
+        <div class="col-r1">
+            <input class="btn" type="submit" value="Envoyer">
+        </div>
+    </form>
+</footer>
 </body>
 </html>
