code inprove sans pseudo element

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div class="expand plus"><i class="fas fa-plus-square"></i></div>
     <div class="expand minus"><i class="fas fa-minus-square"></i></div>
     <div class="cart career experience">
+        <h2>Expérience</h2>
         <div class="tohide">
             <div class="cart-bloc">
 
@@ -98,6 +99,7 @@
     <div class="expand plus"><i class="fas fa-plus-square"></i></div>
     <div class="expand minus"><i class="fas fa-minus-square"></i></div>
     <div class="cart career skill">
+        <h2>Compétences</h2>
         <div class="tohide">
             <div class="col-3">
                 <div class="cart-bloc">
@@ -221,6 +223,7 @@
     <div class="expand plus"><i class="fas fa-plus-square"></i></div>
     <div class="expand minus"><i class="fas fa-minus-square"></i></div>
     <div class="cart career training">
+        <h2>Formation</h2>
         <div class="tohide">
             <div class="cart-bloc">
                 <div class="date">2019-2020</div>
