--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="expand plus"><i class="fas fa-plus-square"></i></div>
     <div class="expand minus"><i class="fas fa-minus-square"></i></div>
     <div class="cart career experience">
-        <h2>Expérience</h2>
+        <h2 class="title-outside">Expérience</h2>
         <div class="tohide">
             <div class="cart-bloc">
 
@@ -99,7 +99,7 @@
     <div class="expand plus"><i class="fas fa-plus-square"></i></div>
     <div class="expand minus"><i class="fas fa-minus-square"></i></div>
     <div class="cart career skill">
-        <h2>Compétences</h2>
+        <h2 class="title-outside">Compétences</h2>
         <div class="tohide">
             <div class="col-3">
                 <div class="cart-bloc">
@@ -223,7 +223,7 @@
     <div class="expand plus"><i class="fas fa-plus-square"></i></div>
     <div class="expand minus"><i class="fas fa-minus-square"></i></div>
     <div class="cart career training">
-        <h2>Formation</h2>
+        <h2 class="title-outside">Formation</h2>
         <div class="tohide">
             <div class="cart-bloc">
                 <div class="date">2019-2020</div>
