--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>CV - David KIPS</title>
     <script src="https://kit.fontawesome.com/f428ff46c6.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Jura|Lato:400,700&display=swap" rel="stylesheet">
